ta-ubuntu-nginx/main.tf
locals {
  vpc_id           = "vpc-1b0c3060"
  subnet_id        = "subnet-300f9a3f"
  ssh_user         = "ubuntu"
  key_name         = "devops"
  private_key_path = "D:\\Practice\\aws-keypair\\devops.pem"
}

provider "aws" {
  region = "us-east-1"
}

resource "aws_security_group" "nginx-sg" {
  name   = "nginx_acces"
  vpc_id = local.vpc_id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_instance" "nginx" {
  ami                         = "ami-09e67e426f25ce0d7"
  subnet_id                   = local.subnet_id
  instance_type               = "t2.micro"
  associate_public_ip_address = true
  security_groups             = [aws_security_group.nginx-sg.id]
  key_name                    = local.key_name

  tags = {
    "Name" = "nginx"
  }

  provisioner "remote-exec" { 
    inline = ["echo 'Wait until SSH is ready..'"]

    connection {
      type        = "ssh"
      user        = local.ssh_user
      private_key = file(local.private_key_path)
      host        = aws_instance.nginx.public_ip
    }

  }

  provisioner "local-exec" {
    command = "ansible-playbook -i ${aws_instance.nginx.public_ip}, --private-key ${local.private_key_path} nginx.yaml"

  }
}

output "ngnix_ip" {
  value = aws_instance.nginx.public_ip
}
